# qfin

./: README.md  pyproject.toml
examples/: api_001.ipynb  backtest_001.ipynb  backtest_002.ipynb  backtest_003.ipynb  backtest_004.ipynb  indicators_cross.ipynb  indicators_echo.ipynb
examples/data/: _^spx_with_leverage.csv
src/qfin/api/: bybit.py
src/qfin/backtester/: backtester.py  plot.py  runners.py  stats.py
tests/: conftest.py  test_backtester.py  test_risk_management.py  test_runners.py  test_stats.py
