[project]
name = "qfin"
version = "0.1.17"
description = "Tools for quantitative financial"
readme = "README.md"
authors = [{ name = "r1quant" }]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3",
    "numpy>=2",
    "pandas>=2",
    "plotly>=6",
    "pybit>=5.13.0",
    "websocket-client>=1.9.0",
    "yfinance>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/r1quant/qfin.git"
Repository = "https://github.com/r1quant/qfin.git"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 130
unfixable = ["F401"] # Disable fix for unused imports (`F401`).
